found bug where add shipping address portion wouldnt collapse when countryDropdown component was extended, solved but still need to take away the rest of the country dropdown classes to solve other issue when reopened

--- a/src/Styles/checkout.scss
+++ b/src/Styles/checkout.scss
@@ -170,7 +170,7 @@
 
 .checkout-shipping-info-region-state-city-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   column-gap: 20px;
 }
 
@@ -485,9 +485,9 @@
     padding-top: 14.5px;
   }
 
-  .checkout-input {
-    font-size: 11px;
-  }
+  // .checkout-input {
+  //   font-size: 12px;
+  // }
 
   .checkout-discount-btn {
     font-size: 11px !important;
